# aqhealth

./: LICENSE  README.md  pyproject.toml
examples/: simple_calculation.py
src/aqhealth/: __init__.py  mcstats.py  mortality.py
