[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqhealth"
version = "0.0.1"
authors = [
  { name="Sebastian Eastham", email="seastham@mit.edu" },
]
description = "A simple package to calculate health impacts from air quality change"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sdeastham/aqhealth"
"Bug Tracker" = "https://github.com/sdeastham/aqhealth/issues"
